@@ -1,3 +1,8 @@
+2010-01-27  Carles Pina i Estany  <carles@pina.cat>
+
+	* util/lvm.c: New macro LVM_DEV_MAPPER_STRING.
+	(grub_util_lvm_isvolume): Use LVM_DEV_MAPPER_STRING.
+
 2010-01-26  Carles Pina i Estany  <carles@pina.cat>
 
 	* util/bin2h.c (usage): Fix warning (space after backslash).
